--- a/style.css
+++ b/style.css
@@ -109,6 +109,8 @@ h3 {
     border: 4px solid #00F8C6;
     margin: auto;
     width: 250px;
+    padding: 5px;
+    background-color: #171516;
 }
 
 .headshot img {
@@ -126,9 +128,7 @@ h3 {
 .content {
     display: flex;
     flex-direction: row;
-    margin-left: 10px;
-    padding: 4px;
-    margin: auto;
+    max-width: 40%;
     padding: 15px;
 }
 
@@ -172,15 +172,19 @@ h3 {
     text-align: center;
 }
 
+.icons {
+    max-width: 30%;
+}
+
 .icons p {
-    margin-left: 20px;
-    max-width: fit-content;
+    text-align: center;
 }
 
 .icons i{
     padding: 2px;
     font-size: 24px;
 }
+
 .indv-project ul {
     list-style-type: none;
     width: 120px;
@@ -258,6 +262,14 @@ figcaption a:hover {
 
 .contact form button {
     margin-top: 10px;
+    border: 2px solid #00F8C6;
+    background-color: #090208;
+    color: #00F8C6;
+}
+
+.contact form button:hover {
+    background-color: #00F8C6;
+    color: #090208;
 }
 
 
