--- a/style.css
+++ b/style.css
@@ -1,49 +1,26 @@
-body {
-    font-family: "Arvo";
-    margin: 10px 75px;
-    padding: 10px;
-    box-sizing: border-box;
-    background-color: #090208;
-    color: #00F8C6;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+/***** Root Variables *****/
+:root {
+  --primary-bg: #090208;
+  --primary-text: #00f8c6;
 }
 
-a {
-    color: inherit;
-    text-decoration: none;
+/***** Fonts *****/
+.arvo-regular {
+  font-family: "Arvo", serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
-ul {
-    list-style: circle;
-    width: 100px;
-}
-
-.upper {
-    text-transform: uppercase;
-}
-
-h1, h2 {
-    font-family: "Notable", sans-serif;
-    letter-spacing: 5px;
-}
-
-h3 {
-    font-size: 3rem;
-    font-family: "Handjet", sans-serif;
-    font-weight: 300;
-    margin-top: 10px;
-    margin-bottom: 10px;
+.notable-regular {
+  font-family: "Notable", serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
 .glow-text {
-    text-shadow:
-        1px 1px 5px #00c0fe80,
-        1px 1px 10px #00c0fe66,
-        1px 1px 15px #00c0fe4d,
-        1px 1px 20px #00c0fe33;
-    transition-duration: 0.25s;
+  text-shadow: 1px 1px 5px #00c0fe80, 1px 1px 10px #00c0fe66,
+    1px 1px 15px #00c0fe4d, 1px 1px 20px #00c0fe33;
+  transition-duration: 0.25s;
 }
 
 /* .glow-text:hover {
@@ -56,279 +33,264 @@ h3 {
 } */
 
 
-/*BIO SECTION*/
+/***** Global *****/
+body {
+  font-family: "Arvo";
+  margin: 10px 75px;
+  padding: 10px;
+  box-sizing: border-box;
+  background-color: var(--primary-bg);
+  color: var(--primary-text);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+ul {
+  list-style: circle;
+  width: 100px;
+}
+
+.upper {
+  text-transform: uppercase;
+}
+
+h1,
+h2 {
+  font-family: "Notable", sans-serif;
+  letter-spacing: 5px;
+}
+
+h3 {
+  font-size: 3rem;
+  font-family: "Handjet", sans-serif;
+  font-weight: 300;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+/***** Bio Section *****/
+.biography {
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  width: 100vw;
+}
+
 .bio h1 {
-    font-size: 4rem;
-    margin-bottom: 10px;
+  font-size: 4rem;
+  margin-bottom: 10px;
 }
 
 .underline {
-    background-color: #00f8c6ad;
-    border: 2px dotted #03ffffd7;
-    width: 425px;
-    height: 5px;
-    padding: 0;
+  background-color: #00f8c6ad;
+  border: 2px dotted #03ffffd7;
+  width: 425px;
+  height: 5px;
+  padding: 0;
 }
 
-
-
 .socials {
-    width: 225px;
-    margin-top: 10px;
-    font-size: 1.5rem;
-    letter-spacing: 5px;
+  width: 225px;
+  margin-top: 10px;
+  font-size: 1.5rem;
+  letter-spacing: 5px;
 }
 
 .socials i:hover {
-    color: #ff69b4c7;
+  color: #ff69b4c7;
 }
 
 .about-me {
-    width: 600px;
-    padding: 0px 10px 0px 10px;
-    text-align: left;
+  width: 600px;
+  padding: 0px 10px 0px 10px;
+  text-align: left;
+  margin-left: 0;
+  padding-left: 0;
 }
 
 .about-me p {
-    font-weight: 300;
+  font-weight: 300;
 }
 
 .outer-border {
-    margin: 0;
-    padding: 0;
-    border: 2.5px solid #00F8C6;
-    border-radius: 5px;
-    width: fit-content;
+  margin: 0;
+  padding: 0;
+  border: 2.5px solid #00f8c6;
+  border-radius: 5px;
+  width: fit-content;
 }
 
-/*HEAD SHOT SECTION*/
+/***** Head Shot Section *****/
 .headshot {
-    position: relative;
-    left: 50px;
-    overflow: hidden;
-    border: 4px solid #00F8C6;
-    margin: auto;
-    width: 250px;
-    padding: 5px;
-    background-color: #171516;
+  position: relative;
+  top: 20px;
+  left: -275px;
+  overflow: hidden;
+  border: 4px solid #00f8c6;
+  margin: auto;
+  padding: 5px;
+  background-color: #171516;
 }
 
 .headshot img {
-    width: 100%;
-    padding: 0;
+  width: 200px;
+  height: auto;
+  padding: 0;
 }
 
-/*PROJECT LIST SECTION*/
-.container {
-    margin: 10px;
-    padding: 20px;
-    border: 2px dotted #00F8C6;
-}
-
-.content {
-    display: flex;
-    flex-direction: row;
-    max-width: 40%;
-    padding: 15px;
-}
-
-.project-list {
-    margin-top: 50px;
-    position: relative;
-    left: -50px;
-}
-
-.project-list h2 {
-    font-size: 3rem;
-    margin-top: 75px;
-    margin-bottom: 10px;
-    display: flex;
-    justify-content: space-evenly;
-}
-
-.indv-project {
-    display: flex;
-    flex-direction: row;
-    justify-content: end;
-    align-items: center;
-    padding: 20px;
-    margin-left: -100px;
-}
-
-.indv-project h4 {
-    font-size: 3rem;
-    font-family: "Handjet", sans-serif;
-    font-weight: 400;
-    padding: 0;
-    margin: 0;
-}
-
-.indv-project h5 {
-    font-family: "Handjet", sans-serif;
-    font-weight: 300;
-    font-size: 2rem;
-    margin-top: 0;
-    margin-bottom: 0;
-    text-align: center;
-}
-
-.icons {
-    max-width: 30%;
-}
-
-.icons p {
-    text-align: center;
-}
-
-.icons i{
-    padding: 2px;
-    font-size: 24px;
-}
-
-.indv-project ul {
-    list-style-type: none;
-    width: 120px;
-    text-align: center;
-    padding: 0;
-    font-size: .75rem;
-}
-
-.indv-project-details {
-    margin-right: 10px;
-}
-
-.indv-project figure {
-    margin-top: -40px;
-    margin-right: -5px;
-}
-
-.indv-project img {
-    max-width: 350px;
-    border: 3px dotted #ff69b4c7;
-    margin: 0;
-    /* padding: 5px; */
-}
-
-figcaption {
-    text-align: end;
-}
-
-figcaption a:hover {
-    color: #ff69b4c7;
-}
-
-
-
-/*CONTACT SECTION*/
+/***** Contact Section *****/
 .contact {
-    border: 3px dotted #00F8C6;
-    display: flex;
-    flex-direction: column;
-    justify-content: left;
-    align-items: center;
-    max-width: 350px;
-    margin: 60px 10px 10px 50px;
+  display: flex;
+  flex-direction: column;
+  justify-content: left;
+  align-items: center;
+  border: 3px dotted var(--primary-text);
+  max-width: 250px;
 }
-
-/* .contact-border {
-    margin: 5px;
-} */
 
 .contact h4 {
-    text-align: center;
-    margin: 10px;
-    padding: 0;
-    font-family: "Notable", sans-serif;
-    font-size: 2rem;
-    letter-spacing: 3px;
+  text-align: center;
+  font-family: "Notable", sans-serif;
+  font-size: 2rem;
+  letter-spacing: 3px;
+  margin: 5px 10px;
+  padding: 0 5px 0 5px;
 }
 
-.contact form {
-    padding: 20px;
+.contact-form {
+  margin: 0px 10px;
+  padding: 10px;
 }
 
-.contact form label {
-    margin-bottom: 20px;
+.contact-form label {
+  display: block;
+  margin-bottom: 3px;
 }
 
-.contact form input, textarea {
-    background-color: #1f1c1e;
-    color: #c2c1c2;
-    display: flex;
-    justify-content: end;
-    margin-bottom: 10px;
-    width: 250px;
+.contact form input,
+textarea {
+  background-color: #1f1c1e;
+  color: #c2c1c2;
+  display: flex;
+  justify-content: end;
+  margin-bottom: 10px;
+  width: 200px;
 }
 
 .contact form button {
-    margin-top: 10px;
-    border: 2px solid #00F8C6;
-    background-color: #090208;
-    color: #00F8C6;
+  margin-top: 10px;
+  border: 2px solid var(--primary-text);
+  background-color: var(--primary-bg);
+  color: var(--primary-text);
 }
 
 .contact form button:hover {
-    background-color: #00F8C6;
-    color: #090208;
+  background-color: var(--primary-text);
+  color: var(--primary-bg);
 }
 
+/***** Project List Section *****/
+.container {
+  margin: 10px;
+  padding: 20px;
+  border: 2px dotted #00f8c6;
+}
 
+.content {
+  display: flex;
+  flex-direction: row;
+  max-width: 40%;
+  padding: 15px;
+}
 
+.project-list {
+  margin-top: 50px;
+  position: relative;
+  left: -50px;
+}
 
+.project-list h2 {
+  font-size: 3rem;
+  margin-top: 75px;
+  margin-bottom: 10px;
+  display: flex;
+  justify-content: space-evenly;
+}
 
+.indv-project {
+  display: flex;
+  flex-direction: row;
+  justify-content: end;
+  align-items: center;
+  padding: 20px;
+  margin-left: -100px;
+}
 
+.indv-project h4 {
+  font-size: 3rem;
+  font-family: "Handjet", sans-serif;
+  font-weight: 400;
+  padding: 0;
+  margin: 0;
+}
 
+.indv-project h5 {
+  font-family: "Handjet", sans-serif;
+  font-weight: 300;
+  font-size: 2rem;
+  margin-top: 0;
+  margin-bottom: 0;
+  text-align: center;
+}
 
-/* .gradient-border {
-    --border-width: 5px;
-  
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 600px;
-    height: 250px;
-    background: #160515;
-    border-radius: 10px;
-    text-align: center;
-    margin: 40px auto;
-  
-    &::after {
-      position: absolute;
-      content: "";
-      top: calc(-1 * var(--border-width));
-      left: calc(-1 * var(--border-width));
-      z-index: -1;
-      width: calc(100% + var(--border-width) * 2);
-      height: calc(100% + var(--border-width) * 2);
-      background: linear-gradient(
-        60deg,
-        hsl(224, 85%, 66%, 85%),
-        hsl(269, 85%, 66%, 85%),
-        hsl(314, 85%, 66%, 85%),
-        hsl(359, 85%, 66%, 85%),
-        hsl(44, 85%, 66%, 85%),
-        hsl(89, 85%, 66%, 85%),
-        hsl(134, 85%, 66%, 85%),
-        hsl(179, 85%, 66%, 85%)
-      );
-      background-size: 300% 300%;
-      background-position: 0 50%;
-      border-radius: 10px;
-      animation: moveGradient 4s alternate infinite;
-    }
-  }
-  
-  @keyframes moveGradient {
-    50% {
-      background-position: 100% 50%;
-    }
-  }
- */
+.icons {
+  max-width: 30%;
+}
 
+.icons p {
+  text-align: center;
+}
 
+.icons i {
+  padding: 2px;
+  font-size: 24px;
+}
 
+.indv-project ul {
+  list-style-type: none;
+  width: 120px;
+  text-align: center;
+  padding: 0;
+  font-size: 0.75rem;
+}
 
+.indv-project-details {
+  margin-right: 10px;
+}
 
+.indv-project figure {
+  margin-top: -40px;
+  margin-right: -5px;
+}
 
+.indv-project img {
+  max-width: 350px;
+  border: 3px dotted #ff69b4c7;
+  margin: 0;
+  /* padding: 5px; */
+}
+
+figcaption {
+  text-align: end;
+}
+
+figcaption a:hover {
+  color: #ff69b4c7;
+}
 
