--- a/style.css
+++ b/style.css
@@ -11,9 +11,22 @@
   font-style: normal;
 }
 
+.handjet-regular {
+  font-family: "Handjet", serif;
+  font-optical-sizing: auto;
+  font-weight: 250;
+  font-style: normal;
+}
+
 .notable-regular {
   font-family: "Notable", serif;
   font-weight: 400;
+  font-style: normal;
+}
+
+.space-grotesk {
+  font-family: "Space Grotesk", serif;
+  font-optical-sizing: auto;
   font-style: normal;
 }
 
@@ -32,18 +45,25 @@
         3px 3px 40px #ffff0066;
 } */
 
-
 /***** Global *****/
 body {
-  font-family: "Arvo";
-  margin: 10px 75px;
-  padding: 10px;
   box-sizing: border-box;
   background-color: var(--primary-bg);
-  color: var(--primary-text);
+  display: flex;
+  justify-content: center;
+  max-width: 100vw;
+  max-height: 100vh;
+}
+
+.wrapper {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  color: var(--primary-text);
+  max-width: 70%;
+  margin: auto;
+  padding: 10px;
+  /* border: 3px solid hotpink; */
 }
 
 a {
@@ -60,15 +80,12 @@ ul {
   text-transform: uppercase;
 }
 
-h1,
-h2 {
-  font-family: "Notable", sans-serif;
+h1 {
   letter-spacing: 5px;
 }
 
 h3 {
   font-size: 3rem;
-  font-family: "Handjet", sans-serif;
   font-weight: 300;
   margin-top: 10px;
   margin-bottom: 10px;
@@ -77,9 +94,12 @@ h3 {
 /***** Bio Section *****/
 .biography {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   flex-direction: row;
-  width: 100vw;
+  width: 100%;
+  margin: auto;
+  padding: 0;
+  /* border: 3px solid red; */
 }
 
 .bio h1 {
@@ -121,43 +141,49 @@ h3 {
 .outer-border {
   margin: 0;
   padding: 0;
-  border: 2.5px solid #00f8c6;
+  border: 2.5px solid var(--primary-text);
   border-radius: 5px;
-  width: fit-content;
+  width: 100%;
 }
 
 /***** Head Shot Section *****/
 .headshot {
-  position: relative;
-  top: 20px;
-  left: -275px;
   overflow: hidden;
-  border: 4px solid #00f8c6;
-  margin: auto;
-  padding: 5px;
+  border: 4px solid var(--primary-text);
+  margin: 50px 75px 50px 10px;
   background-color: #171516;
 }
-
 .headshot img {
-  width: 200px;
+  width: 250px;
   height: auto;
   padding: 0;
 }
 
 /***** Contact Section *****/
-.contact {
+.container {
+  /* border: 3px solid orange; */
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 20px;
+  margin: 0;
+  padding: 0;
+}
+
+.contact-me {
   display: flex;
   flex-direction: column;
   justify-content: left;
   align-items: center;
   border: 3px dotted var(--primary-text);
-  max-width: 250px;
+  width: 250px;
+  height: 400px;
+  margin-left: 15px;
 }
 
-.contact h4 {
+.contact-me h4 {
   text-align: center;
-  font-family: "Notable", sans-serif;
-  font-size: 2rem;
+  font-size: 2em;
   letter-spacing: 3px;
   margin: 5px 10px;
   padding: 0 5px 0 5px;
@@ -171,23 +197,30 @@ h3 {
 .contact-form label {
   display: block;
   margin-bottom: 3px;
+  font-size: 1em;
 }
 
 .contact form input,
 textarea {
-  background-color: #1f1c1e;
-  color: #c2c1c2;
   display: flex;
   justify-content: end;
-  margin-bottom: 10px;
+  background-color: #1f1c1e;
+  color: #c2c1c2;
   width: 200px;
+  margin: 0;
+  padding: 0;
 }
 
 .contact form button {
-  margin-top: 10px;
-  border: 2px solid var(--primary-text);
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-color: var(--primary-bg);
   color: var(--primary-text);
+  border: 2px solid var(--primary-text);
+  border-radius: 3px;
+  height: 2.5em;
+  margin: 20px auto 5px;
 }
 
 .contact form button:hover {
@@ -196,17 +229,36 @@ textarea {
 }
 
 /***** Project List Section *****/
-.container {
+.project-list {
+  /* border: 3px solid white; */
+  width: 60%;
+  margin-right: 0;
+  /* margin: auto; */
+  padding: 0;
+}
+.project-list h2 {
+  display: flex;
+  justify-content: space-evenly;
+  font-size: 3rem;
+  letter-spacing: 2px;
+  margin: 0 0 10px 0
+}
+
+.project-container {
   margin: 10px;
   padding: 20px;
   border: 2px dotted #00f8c6;
 }
 
 .content {
+  /* border: 3px solid yellow; */
   display: flex;
   flex-direction: row;
-  max-width: 40%;
-  padding: 15px;
+  justify-content: space-between;
+  max-width: 100%;
+  gap: 20px;
+  margin: 0;
+  padding: 0;
 }
 
 .project-list {
@@ -215,33 +267,22 @@ textarea {
   left: -50px;
 }
 
-.project-list h2 {
-  font-size: 3rem;
-  margin-top: 75px;
-  margin-bottom: 10px;
-  display: flex;
-  justify-content: space-evenly;
-}
-
 .indv-project {
   display: flex;
   flex-direction: row;
   justify-content: end;
   align-items: center;
   padding: 20px;
-  margin-left: -100px;
 }
 
 .indv-project h4 {
   font-size: 3rem;
-  font-family: "Handjet", sans-serif;
   font-weight: 400;
   padding: 0;
   margin: 0;
 }
 
 .indv-project h5 {
-  font-family: "Handjet", sans-serif;
   font-weight: 300;
   font-size: 2rem;
   margin-top: 0;
@@ -270,20 +311,16 @@ textarea {
   font-size: 0.75rem;
 }
 
-.indv-project-details {
-  margin-right: 10px;
+.content figure {
+  display: flex;
+  justify-content: end;
+  flex-direction: column;
+  margin: auto;
 }
 
-.indv-project figure {
-  margin-top: -40px;
-  margin-right: -5px;
-}
-
-.indv-project img {
-  max-width: 350px;
+.project-img {
+  max-width: 100%;
   border: 3px dotted #ff69b4c7;
-  margin: 0;
-  /* padding: 5px; */
 }
 
 figcaption {
